Pulizia del codice